# android

./: .editorconfig  .gitallowed  .gitignore  BUILD  PREUPLOAD.cfg  README-xr.md  README.md  Rest  default.profraw  get_aosp_changes.sh  icon-robots.txt  intellij.yaml
adt-ui-compose/: BUILD  BUILD.bazel  OWNERS  README.md  build.gradle.kts  gradle.properties  ~BUILD.bazel
adt-ui-compose/jewel.sdkcompat/: BUILD.bazel
adt-ui-compose/jewel.sdkcompat/api243/main/utils/tooltips/: TooltipStyleFactory.kt
adt-ui-compose/jewel.sdkcompat/api253/main.utils.tooltips/: TooltipStyleFactory.kt
adt-ui-compose/src/main/utils/: UnitConversion.kt
adt-ui-compose/src/main/utils/tooltips/: TooltipStyleFactory.kt
adt-ui-compose/src/sample/: SampleComposeComponent.kt  SampleComposeWindow.kt
adt-ui-compose/src/sample/components/: Buttons.kt  Checkboxes.kt  Dropdowns.kt  SampleComposeComponent.kt
adt-ui-compose/src/sample/samplecomposewindow/: ComponentShowcase.kt
adt-ui-compose/src/sample/samplecomposewindow/components/: Buttons.kt  Checkboxes.kt  Dropdowns.kt
adt-ui-compose/testSrc/sample/: SampleComposeComponentTest.kt
adt-ui-compose/testSrc/sample/samplecomposewindow/: SampleComposeWindow.kt
android-uitests/testData/VulkanCrashes/app/: CMakeLists.txt  build.gradle  proguard-rules.pro
android-uitests/testData/VulkanCrashes/app/src/main/: AndroidManifest.xml
apkanalyzer/apk/: BUILD.bazel  ~BUILD.bazel
apkanalyzer/gradle/: BUILD.bazel  ~BUILD.bazel
apkanalyzer/gradle/integration-tests/: BUILD.bazel  ~BUILD.bazel
apkanalyzer/gradle/integration-tests/projects/simpleApplication/: BUILD.bazel
apkanalyzer/gradle/integration-tests/projects/simpleApplication/app/: build.gradle
aswb/testing/test_deps/: BUILD  aswb_test_projects.BUILD  deps.bzl  repository_cache.bzl  test_deps.MODULE.bazel  test_deps.bzl  test_deps_bazel_artifacts.bzl  ~BUILD
aswb/testing/test_deps/projects/: .bazeliskrc  .bazelrc  .gitignore  BUILD  MODULE.bazel  WORKSPACE  cc_toolchain_config.bzl  rules_kotlin.patch
aswb/testing/test_deps/projects/annotation_processor/: .bazelproject
aswb/testing/test_deps/projects/annotation_processor/main/: BUILD
aswb/testing/test_deps/projects/autovalue/: .bazelproject
aswb/testing/test_deps/projects/autovalue/auto_value/: BUILD
aswb/testing/test_deps/projects/autovalue/project/: ~BUILD
aswb/testing/test_deps/projects/bzl_tests/: .bazelproject  BUILD  check_utils.bzl  test_fixture.bzl  ~BUILD
aswb/testing/test_deps/projects/cc1/: .bazelproject  BUILD
aswb/testing/test_deps/projects/cc1/project/: AndroidManifest.xml  BUILD  TestClass.cc  TestClass.h  hello-api.cc  hello-api.h  hello-jni.cc
aswb/testing/test_deps/projects/cc_genhdr/: .bazelproject
aswb/testing/test_deps/projects/cc_genhdr/project/: BUILD  TestClass.cc
aswb/testing/test_deps/projects/gencode_twowaydeps/: .bazelproject
aswb/testing/test_deps/projects/gencode_twowaydeps/project/: BUILD
aswb/testing/test_deps/projects/generated1/: .bazelproject
aswb/testing/test_deps/projects/generated1/project/: BUILD
aswb/testing/test_deps/projects/generated2/: .bazelproject
aswb/testing/test_deps/projects/generated2/project/: Generated.java_  ~BUILD
aswb/testing/test_deps/projects/generated3/: .bazelproject
aswb/testing/test_deps/projects/generated3/project/: ~BUILD
aswb/testing/test_deps/projects/generated_proto_files/: .bazelproject
aswb/testing/test_deps/projects/generated_tests/: .bazelproject
aswb/testing/test_deps/projects/generated_tests/project/: BUILD
aswb/testing/test_deps/projects/gensrc_conflict/: .bazelproject
aswb/testing/test_deps/projects/gensrcjars/: .bazelproject  gen_srcjar.bzl
aswb/testing/test_deps/projects/ijar_analysis_suppressing/: .bazelproject
aswb/testing/test_deps/projects/ijar_analysis_suppressing/project/: BUILD
aswb/testing/test_deps/projects/java_and_deps/: .bazelproject  BUILD
aswb/testing/test_deps/projects/java_and_deps/project/: BUILD
aswb/testing/test_deps/projects/javabinaries/: .bazelproject
aswb/testing/test_deps/projects/javabinaries/project/: BUILD
aswb/testing/test_deps/projects/libraries/: .bazelproject
aswb/testing/test_deps/projects/libraries/project/: BUILD
aswb/testing/test_deps/projects/navigation_to_source/: .bazelproject
aswb/testing/test_deps/projects/navigation_to_source/project/: BUILD
aswb/testing/test_deps/projects/navigation_to_source_java/: .bazelproject
aswb/testing/test_deps/projects/navigation_to_source_java/project/: ~BUILD
aswb/testing/test_deps/projects/redundant_targets/: .bazelproject
aswb/testing/test_deps/projects/redundant_targets/project/: BUILD
aswb/testing/test_deps/projects/simple_android/: .bazelproject
aswb/testing/test_deps/projects/simple_android/main/: BUILD
aswb/testing/test_deps/projects/simple_android_kotlin/: .bazelproject
aswb/testing/test_deps/projects/simple_android_kotlin/main/: BUILD
aswb/testing/test_deps/projects/simple_compose/: .bazelproject
aswb/testing/test_deps/projects/simple_compose/main/: AndroidManifest.xml  BUILD
aswb/testing/test_deps/projects/simple_java/: .bazelproject  BUILD  ~BUILD
aswb/testing/test_deps/projects/simple_kotlin/: .bazelproject  BUILD
aswb/testing/test_deps/projects/simple_kotlin/project/: BUILD
aswb/testing/test_deps/projects/simple_proto/: .bazelproject
aswb/testing/test_deps/projects/simple_proto/project/: BUILD  lib.proto  lib_edition_2024.proto
aswb/testing/test_deps/projects/slow_java_binary/: .bazelproject  BUILD
aswb/testing/test_deps/projects/src_transform/: .bazelproject
logcat/gradle/integration-tests/: BUILD.bazel  ~BUILD.bazel
ml-api/: .gitignore  BUILD  BUILD.bazel  OWNERS  build.gradle.kts  gradle.properties
ml-api/src/main/kotlin/icons/: AIPluginIcons.java  AipluginIcons.kt
ml-api/src/resources/messages/: StudioBotBundle.properties
project-system-integration-tests/testData/snapshots/: BUILD.bazel  ~BUILD.bazel
project-system-integration-tests/testData/snapshots/sample-project/: settings.gradle.kts
project-system-integration-tests/testData/snapshots/sample-project/app/: build.gradle
(+59897 files in other folders)
