load("//tools/base/bazel:bazel.bzl", "iml_module")
load("//tools/base/bazel:jvm_import.bzl", "jvm_import")

# managed by go/iml_to_build
iml_module(
    name = "intellij.android.adt.ui.compose",
    srcs = ["src"],
    iml_files = ["intellij.android.adt.ui.compose.iml"],
    kotlin_use_compose = True,
    # do not sort: must match IML order
    test_deps = [
        "//tools/adt/idea/.idea/libraries:junit4",
        "//prebuilts/tools/common/m2:jewel-standalone",
        "//prebuilts/tools/common/m2:compose-desktop-test",
        "//tools/adt/idea/.idea/libraries:jetbrains.kotlinx.coroutines.test",
    ],
    test_resources = ["testResources"],
    test_srcs = ["testSrc"],
    visibility = ["//visibility:public"],
    # do not sort: must match IML order
    exports = [
        "//tools/adt/idea/adt-ui-compose:jewel-ide",
        "//prebuilts/tools/common/m2:compose-desktop",
        "//prebuilts/tools/common/m2:jewel-standalone",
        "//prebuilts/tools/common/m2:compose-desktop-test",
    ],
    # do not sort: must match IML order
    deps = [
        "@intellij//:intellij-sdk",
        "//tools/adt/idea/adt-ui-compose:jewel-ide",
        "//prebuilts/tools/common/m2:compose-desktop",
    ],
)

# managed by go/iml_to_build
jvm_import(
    name = "jewel-ide",
    jars = ["//prebuilts/tools/common/m2:jewel-ide.jar"],
    visibility = ["//visibility:public"],
)
