load("//tools/base/bazel:bazel.bzl", "iml_module")

# managed by go/iml_to_build
iml_module(
    name = "intellij.android.ml-api",
    srcs = ["src/main/kotlin"],
    iml_files = ["intellij.android.ml-api.iml"],
    resources = ["src/resources"],
    test_class = "com.android.tools.idea.studiobot.MlApiTestSuite",
    visibility = ["//visibility:public"],
    # do not sort: must match IML order
    deps = [
        "@intellij//:intellij-sdk",
        "@intellij//:com.intellij.java[test]",
        "@intellij//:org.jetbrains.kotlin[test]",
        "@intellij//:test-framework[test]",
        "//tools/adt/idea/.idea/libraries:mockito[test]",
        "//tools/base/testutils:studio.android.sdktools.testutils[module, test]",
        "//tools/adt/idea/.idea/libraries:truth[test]",
        "//tools/adt/idea/.idea/libraries:kotlin-test[test]",
    ],
)

# managed by go/iml_to_build
iml_module(
    name = "intellij.android.ml-api-tests",
    data = [
        "//prebuilts/studio/jdk:mock-jdk17",  # Used by test descriptors.
        "//tools/adt/idea/adt-testutils:test-log.properties",  # Used for idea.log.config.properties.file.
        "//tools/adt/idea/studio:required_jvm_args",  # Used to compute JNA path
    ],
    iml_files = ["intellij.android.ml-api-tests.iml"],
    test_class = "com.android.tools.idea.studiobot.MlApiTestSuite",
    test_friends = ["//tools/adt/idea/ml-api:intellij.android.ml-api"],
    test_resources = ["src/testSrc/resources"],
    test_srcs = ["src/testSrc/kotlin"],
    visibility = ["//visibility:public"],
    runtime_deps = ["//tools/vendor/google/ml/aiplugin/sdkcompat:aiplugin.sdkcompat"],
    # do not sort: must match IML order
    deps = [
        "@intellij//:intellij-sdk",
        "//tools/adt/idea/.idea/libraries:junit4[test]",
        "@intellij//:com.intellij.java[test]",
        "@intellij//:org.jetbrains.kotlin[test]",
        "@intellij//:test-framework[test]",
        "//tools/adt/idea/.idea/libraries:mockito[test]",
        "//tools/base/testutils:studio.android.sdktools.testutils[module, test]",
        "//tools/adt/idea/.idea/libraries:truth[test]",
        "//tools/adt/idea/.idea/libraries:kotlin-test[test]",
        "//tools/adt/idea/ml-api:intellij.android.ml-api[module, test]",
        "//tools/adt/idea/.idea/libraries:mockito-kotlin[test]",
        "//tools/adt/idea/.idea/libraries:opentest4j[test]",
    ],
)
