load("//tools/base/bazel:bazel.bzl", "iml_module")

# managed by go/iml_to_build
iml_module(
    name = "intellij.android.ml-api",
    srcs = ["src/main/kotlin"],
    data = [
        "//prebuilts/studio/jdk:mock-jdk17",  # Used by test descriptors.
        "//tools/adt/idea/adt-testutils:test-log.properties",  # Used for idea.log.config.properties.file.
        "//tools/adt/idea/studio:required_jvm_args",  # Used to compute JNA path
    ],
    iml_files = ["intellij.android.ml-api.iml"],
    resources = ["src/resources"],
    test_class = "com.android.tools.idea.gemini.GeminiPluginApiTestSuite",
    test_srcs = ["src/testSrc/kotlin"],
    visibility = ["//visibility:public"],
    # do not sort: must match IML order
    deps = [
        "@intellij//:intellij-sdk",
        "//tools/base/testutils:studio.android.sdktools.testutils[module, test]",
        "@intellij//:test-framework[test]",
        "//tools/adt/idea/.idea/libraries:truth[test]",
        "//tools/adt/idea/.idea/libraries:kotlin-test[test]",
        "//tools/adt/idea/.idea/libraries:junit4[test]",
        "@intellij//:com.intellij.java[test]",
        "@intellij//:org.jetbrains.kotlin[test]",
        "@intellij//:com.intellij.platform.images[test]",
        "//tools/adt/idea/adt-testutils:intellij.android.adt.testutils[module, test]",
    ],
)
