load("//tools/base/bazel:bazel.bzl", "iml_module")

# managed by go/iml_to_build
iml_module(
    name = "intellij.android.ml-api",
    srcs = ["src/main/kotlin"],
    data = [
        "//prebuilts/studio/jdk:mock-jdk17",  # Used by test descriptors.
        "//tools/adt/idea/adt-testutils:test-log.properties",  # Used for idea.log.config.properties.file.
        "//tools/adt/idea/studio:required_jvm_args",  # Used to compute JNA path
    ],
    iml_files = ["intellij.android.ml-api.iml"],
    resources = ["src/resources"],
    test_class = "com.android.tools.idea.gemini.GeminiPluginApiTestSuite",
    # do not sort: must match IML order
    test_deps = [
        "//tools/base/testutils:studio.android.sdktools.testutils",
        "@intellij//:test-framework",
        "//tools/adt/idea/.idea/libraries:truth",
        "//tools/adt/idea/.idea/libraries:kotlin-test",
        "//tools/adt/idea/.idea/libraries:junit4",
        "@intellij//:com.intellij.java",
        "@intellij//:org.jetbrains.kotlin",
        "@intellij//:com.intellij.platform.images",
        "//tools/adt/idea/adt-testutils:intellij.android.adt.testutils",
    ],
    test_srcs = ["src/testSrc/kotlin"],
    visibility = ["//visibility:public"],
    # do not sort: must match IML order
    deps = ["@intellij//:intellij-sdk"],
)
