aswb_test_deps_repository = use_repo_rule("//tools/adt/idea/aswb/testing/test_deps:test_deps.bzl", "aswb_test_deps_repository")

aswb_test_deps_repository(
    name = "aswb_test_deps",
    artifacts = {
        "https://dl.google.com/go/go1.22.4.linux-amd64.tar.gz": "ba79d4526102575196273416239cca418a651e049c2b099f3159db85e7bade7d",
        "https://github.com/JetBrains/kotlin/releases/download/v2.1.0/kotlin-compiler-2.1.0.zip": "b6698d5728ad8f9edcdd01617d638073191d8a03139cc538a391b4e3759ad297",
        "https://github.com/abseil/abseil-cpp/releases/download/20240116.1/abseil-cpp-20240116.1.tar.gz": "3c743204df78366ad2eaf236d6631d83f6bc928d1705dd0000b872e53b73dc6a",
        "https://github.com/abseil/abseil-py/archive/refs/tags/v2.1.0.tar.gz": "8a3d0830e4eb4f66c4fa907c06edf6ce1c719ced811a12e26d9d3162f8471758",
        "https://github.com/bazel-contrib/bazel-gazelle/releases/download/v0.40.0/bazel-gazelle-v0.40.0.tar.gz": "a80893292ae1d78eaeedd50d1cab98f242a17e3d5741b1b9fb58b5fd9d2d57bc",
        "https://github.com/bazel-contrib/bazel_features/releases/download/v1.21.0/bazel_features-v1.21.0.tar.gz": "af3d4fb1cf4f25942cb4a933b1ad93a0ea9fe9ee70c2af7f369fb72a67c266e5",
        "https://github.com/bazel-contrib/rules_go/releases/download/v0.51.0-rc2/rules_go-v0.51.0-rc2.zip": "1101d7e81a6e7f9cee94dd947bed705144bf339257fbec1d73d620df87e58885",
        "https://github.com/bazelbuild/apple_support/releases/download/1.20.0/apple_support.1.20.0.tar.gz": "1bb8059831503602c2eb4d3d0a61c3e75ba4a2bbd43c1603cb79fe9bdcfdde51",
        "https://github.com/bazelbuild/bazel-skylib/releases/download/1.7.1/bazel-skylib-1.7.1.tar.gz": "bc283cdfcd526a52c3201279cda4bc298652efa898b10b4db0837dc51652756f",
        "https://github.com/bazelbuild/bazel-worker-api/releases/download/v0.0.4/bazel-worker-api-v0.0.4.tar.gz": "79b30bcdab8cb0dce1523b28ff798067419715f5540a8a446bbccf393e5eb79c",
        "https://github.com/bazelbuild/platforms/releases/download/0.0.11/platforms-0.0.11.tar.gz": "29742e87275809b5e598dc2f04d86960cc7a55b3067d97221c9abbc9926bff0f",
        "https://github.com/bazelbuild/rules_android/releases/download/v0.6.3/rules_android-v0.6.3.tar.gz": "16cb3e7fa0e9633730414ffad5bc4ef9722336c217f57bd130e3e95689138f45",
        "https://github.com/bazelbuild/rules_cc/releases/download/0.1.1/rules_cc-0.1.1.tar.gz": "712d77868b3152dd618c4d64faaddefcc5965f90f5de6e6dd1d5ddcd0be82d42",
        "https://github.com/bazelbuild/rules_java/releases/download/8.11.0/rules_java-8.11.0.tar.gz": "d31b6c69e479ffa45460b64dc9c7792a431cac721ef8d5219fc9f603fa2ff877",
        "https://github.com/bazelbuild/rules_jvm_external/releases/download/6.7/rules_jvm_external-6.7.tar.gz": "a1e351607f04fed296ba33c4977d3fe2a615ed50df7896676b67aac993c53c18",
        "https://github.com/bazelbuild/rules_kotlin/releases/download/v2.1.3/rules_kotlin-v2.1.3.tar.gz": "e1448a56b2462407b2688dea86df5c375b36a0991bd478c2ddd94c97168125e2",
        "https://github.com/bazelbuild/rules_license/releases/download/1.0.0/rules_license-1.0.0.tar.gz": "26d4021f6898e23b82ef953078389dd49ac2b5618ac564ade4ef87cced147b38",
        "https://github.com/bazelbuild/rules_pkg/releases/download/1.1.0/rules_pkg-1.1.0.tar.gz": "b7215c636f22c1849f1c3142c72f4b954bb12bb8dcf3cbe229ae6e69cc6479db",
        "https://github.com/bazelbuild/rules_proto/releases/download/7.1.0/rules_proto-7.1.0.tar.gz": "14a225870ab4e91869652cfd69ef2028277fc1dc4910d65d353b62d6e0ae21f4",
        "https://github.com/bazelbuild/rules_python/releases/download/1.0.0/rules_python-1.0.0.tar.gz": "4f7e2aa1eb9aa722d96498f5ef514f426c1f55161c3c9ae628c857a7128ceb07",
        "https://github.com/bazelbuild/rules_shell/releases/download/v0.3.0/rules_shell-v0.3.0.tar.gz": "d8cd4a3a91fc1dc68d4c7d6b655f09def109f7186437e3f50a9b60ab436a0c53",
        "https://github.com/bazelbuild/rules_testing/releases/download/v0.8.0/rules_testing-v0.8.0.tar.gz": "89feaf18d6e2fc07ed7e34510058fc8d48e45e6d2ff8a817a718e8c8e4bcda0e",
        "https://github.com/bazelbuild/stardoc/releases/download/0.7.2/stardoc-0.7.2.tar.gz": "0e1ed4a98f26e718776bd64d053d02bb34d98572ccd03d6ba355112a1205706b",
        "https://github.com/google/ksp/releases/download/1.9.23-1.0.20/artifacts.zip": "ee0618755913ef7fd6511288a232e8fad24838b9af6ea73972a76e81053c8c2d",
        "https://github.com/google/ksp/releases/download/2.1.0-1.0.28/artifacts.zip": "fc27b08cadc061a4a989af01cbeccb613feef1995f4aad68f2be0f886a3ee251",
        "https://github.com/indygreg/python-build-standalone/releases/download/20241016/cpython-3.11.10+20241016-x86_64-unknown-linux-gnu-install_only.tar.gz": "8b50a442b04724a24c1eebb65a36a0c0e833d35374dbdf9c9470d8a97b164cd9",
        "https://github.com/madler/zlib/releases/download/v1.3.1/zlib-1.3.1.tar.gz": "9a93b2b7dfdac77ceba5a558a580e74667dd6fede4585b91eefb60f03b72df23",
        "https://github.com/protocolbuffers/protobuf/releases/download/v29.3/protobuf-29.3.zip": "e9b9ac1910b1041065839850603caf36e29d3d3d230ddf52bd13778dd31b9046",
        "https://mirror.bazel.build/bazel_android_tools/android_tools_pkg-0.31.0.tar": "d7cdfc03f3ad6571b7719f4355379177a4bde68d17dca2bdbf6c274d72e4d6cf",
        "https://mirror.bazel.build/bazel_java_tools/releases/java/v13.18/java_tools-v13.18.zip": "1945286e31ca21184b672290caa83cc3470dcdbd00ce0af34f02d24398974ebf",
        "https://mirror.bazel.build/bazel_java_tools/releases/java/v13.18/java_tools_linux-v13.18.zip": "0da77fca085dd477a057581f26fe677d88e4b9f542c517d813e50553829f66a0",
        "https://mirror.bazel.build/cdn.azul.com/zulu/bin/zulu17.50.19-ca-jdk17.0.11-linux_x64.tar.gz": "a1e8ac9ae5804b84dc07cf9d8ebe1b18247d70c92c1e0de97ea10109563f4379",
        "https://mirror.bazel.build/cdn.azul.com/zulu/bin/zulu21.36.17-ca-jdk21.0.4-linux_x64.tar.gz": "318d0c2ed3c876fb7ea2c952945cdcf7decfb5264ca51aece159e635ac53d544",
        "https://mirror.bazel.build/coursier_cli/coursier_cli_v2_1_24.jar": "8c724dc204534353ea8263ba0af624979658f7ab62395f35b04f03ce5714f330",
        "https://mirror.bazel.build/github.com/bazel-contrib/rules_go/releases/download/v0.53.0/rules_go-v0.53.0.zip": "b78f77458e77162f45b4564d6b20b6f92f56431ed59eaaab09e7819d1d850313",
        "https://mirror.bazel.build/github.com/bazelbuild/rules_go/releases/download/v0.40.0/rules_go-v0.40.0.zip": "bfc5ce70b9d1634ae54f4e7b495657a18a04e0d596785f672d35d5f505ab491a",
        "https://repo1.maven.org/maven2/org/jetbrains/kotlinx/kotlinx-serialization-core-jvm/1.6.3/kotlinx-serialization-core-jvm-1.6.3.jar": "29c821a8d4e25cbfe4f2ce96cdd4526f61f8f4e69a135f9612a34a81d93b65f1",
        "https://repo1.maven.org/maven2/org/jetbrains/kotlinx/kotlinx-serialization-json-jvm/1.6.3/kotlinx-serialization-json-jvm-1.6.3.jar": "d3234179bcff1886d53d67c11eca47f7f3cf7b63c349d16965f6db51b7f3dd9a",
        "https://repo1.maven.org/maven2/org/jetbrains/kotlinx/kotlinx-serialization-json/1.6.3/kotlinx-serialization-json-1.6.3.jar": "8c0016890a79ab5980dd520a5ab1a6738023c29aa3b6437c482e0e5fdc06dab1",
        # Gazelle dependencies.
        "https://github.com/golang/sync/archive/refs/tags/v0.8.0.tar.gz": "1872b89e8bf234d4c65edca0bf7c7fd6c414cf74a5a9e10463eb2483cf7b361f",
        "https://github.com/golang/protobuf/archive/refs/tags/v1.5.4.tar.gz": "d75e6960ecfabaaa83a7261b1b630d24e9c63aca79615fb15bf33e11b62fd019",
        "https://github.com/protocolbuffers/protobuf-go/archive/refs/tags/v1.36.3.tar.gz": "d15b5c42786fa47d716b1572e5ba21979dc3163121854ece5101f072d4fa95bb",
        "https://bitbucket.org/creachadair/stringset/get/344423ca24817f0ff8371b5b6ad96f9848a5c109.tar.gz": "c53d3526e766cd95c24e6e59c2e3f141c2001382f2eaab338a50e8cf8f8aa76c",
    },
    bazel_sha256 = "7ff2b6a675b59a791d007c526977d5262ade8fa52efc8e0d1ff9e18859909fc0",
    bazel_url = "https://github.com/bazelbuild/bazel/releases/download/8.2.1/bazel-8.2.1-linux-x86_64",
    bcr_sha256 = "27055508caa3bbab956c28bc6e43f8d44a5a5ffb4b42a8fae78cd822c2261e46",
    bcr_url = "https://github.com/bazelbuild/bazel-central-registry/archive/273df7ac4c4a72daabf72b6b4efb12ab5d002807.zip",
    projects = "tools/adt/idea/aswb/testing/test_deps/projects",
)
