load("//tools/base/bazel:bazel.bzl", "iml_module")
load("//tools/base/bazel:maven.bzl", "maven_repository")

# managed by go/iml_to_build
iml_module(
    name = "intellij.android.logcat.gradle.integration-tests",
    iml_files = ["intellij.android.logcat.gradle.integration-tests.iml"],
    test_class = "com.android.tools.idea.logcat.gradle.LogcatGradleIntegrationTestSuite",
    test_data = [
        ":test_deps",
        "//prebuilts/studio/jdk/jdk17:jdk_runtime_files",
        "//prebuilts/studio/sdk:build-tools/latest",
        "//prebuilts/studio/sdk:platforms/android-34",
        "//tools/adt/idea/android/testData",
        "//tools/adt/idea/project-system-gradle-upgrade/testData",
        "//tools/base/build-system:android_gradle_plugin.zip",
        "//tools/base/build-system:android_gradle_plugin_runtime_dependencies",
        "//tools/base/build-system:gradle-distrib",
    ],
    # do not sort: must match IML order
    test_deps = [
        "@intellij//:intellij-sdk",
        "//tools/adt/idea/project-system-gradle:intellij.android.projectSystem.gradle",
        "//tools/adt/idea/project-system-gradle-models:intellij.android.projectSystem.gradle.models",
        "//tools/adt/idea/.idea/libraries:junit4",
        "//tools/base/testutils:studio.android.sdktools.testutils",
        "//tools/adt/idea/android-test-framework:intellij.android.testFramework",
        "//tools/adt/idea/.idea/libraries:truth",
        "//tools/adt/idea/.idea/libraries:truth-java8-extension",
        "//tools/base/common:studio.android.sdktools.common",
        "//tools/base/sdk-common:studio.android.sdktools.sdk-common",
        "//tools/adt/idea/adt-testutils:intellij.android.adt.testutils",
        "//tools/adt/idea/logcat/gradle:intellij.android.logcat.gradle",
        "//tools/adt/idea/logcat:intellij.android.logcat",
        "//tools/adt/idea/android-common:intellij.android.common",
        "//tools/adt/idea/project-system-gradle:intellij.android.projectSystem.gradle.tests",
    ],
    test_srcs = ["testSrc"],
    visibility = ["//visibility:public"],
)

maven_repository(
    name = "test_deps",
    # keep sorted: for buildifier
    artifacts = [
        "@maven//:androidx.activity.activity-compose_1.5.1",
        "@maven//:androidx.annotation.annotation_1.2.0-rc01",
        "@maven//:androidx.appcompat.appcompat_1.3.0",
        "@maven//:androidx.compose.compose-bom_2022.10.00",
        "@maven//:androidx.compose.foundation.foundation_1.3.0",
        "@maven//:androidx.compose.material.material_1.3.0",
        "@maven//:androidx.compose.material3.material3_1.0.0",
        "@maven//:androidx.compose.ui.ui-graphics_1.3.0",
        "@maven//:androidx.compose.ui.ui-test-junit4_1.3.0",
        "@maven//:androidx.compose.ui.ui-test-manifest_1.3.0",
        "@maven//:androidx.compose.ui.ui-tooling-preview_1.3.0",
        "@maven//:androidx.compose.ui.ui-tooling_1.3.0",
        "@maven//:androidx.compose.ui.ui_1.3.0",
        "@maven//:androidx.constraintlayout.constraintlayout_2.1.3",
        "@maven//:androidx.core.core-ktx_1.6.0",
        "@maven//:androidx.core.core-ktx_1.8.0",
        "@maven//:androidx.lifecycle.lifecycle-common_2.3.0-rc01",
        "@maven//:androidx.lifecycle.lifecycle-runtime-ktx_2.3.1",
        "@maven//:androidx.navigation.navigation-fragment-ktx_2.3.5",
        "@maven//:androidx.navigation.navigation-ui-ktx_2.3.5",
        "@maven//:androidx.savedstate.savedstate_1.1.0-rc01",
        "@maven//:androidx.test.espresso.espresso-core_3.2.0",
        "@maven//:androidx.test.espresso.espresso-core_3.4.0",
        "@maven//:androidx.test.ext.junit_1.1.2",
        "@maven//:androidx.test.ext.junit_1.1.3",
        "@maven//:com.android.support.appcompat-v7_28.0.0",
        "@maven//:com.android.support.constraint.constraint-layout_1.0.2",
        "@maven//:com.android.support.test.espresso.espresso-core_3.0.2",
        "@maven//:com.android.support.test.runner_1.0.2",
        "@maven//:com.google.android.material.material_1.4.0",
        "@maven//:com.google.auto.value.auto-value-annotations_1.6.2",
        "@maven//:com.google.auto.value.auto-value_1.6.2",
        "@maven//:com.google.code.findbugs.jsr305_1.3.9",
        "@maven//:com.google.code.gson.gson_2.8.0",
        "@maven//:com.google.code.gson.gson_2.8.5",
        "@maven//:com.google.guava.guava_19.0",
        "@maven//:com.google.guava.guava_28.1-jre",
        "@maven//:com.google.jimfs.jimfs_1.1",
        "@maven//:com.google.protobuf.protobuf-bom_3.17.2",
        "@maven//:com.google.protobuf.protobuf-bom_3.19.3",
        "@maven//:com.sun.activation.javax.activation_1.2.0",
        "@maven//:commons-io.commons-io_2.4",
        "@maven//:commons-lang.commons-lang_2.4",
        "@maven//:de.undercouch.gradle-download-task_4.0.2",
        "@maven//:it.unimi.dsi.fastutil_7.2.0",
        "@maven//:net.sf.proguard.proguard-gradle_6.0.3",
        "@maven//:org.apache.commons.commons-compress_1.12",
        "@maven//:org.codehaus.mojo.animal-sniffer-annotations_1.17",
        "@maven//:org.jetbrains.kotlin.android.org.jetbrains.kotlin.android.gradle.plugin_1.6.21",
        "@maven//:org.jetbrains.kotlin.android.org.jetbrains.kotlin.android.gradle.plugin_2.2.10",
        "@maven//:org.jetbrains.kotlin.kotlin-android-extensions-runtime_1.6.21",
        "@maven//:org.jetbrains.kotlin.kotlin-bom_1.8.0",
        "@maven//:org.jetbrains.kotlin.kotlin-gradle-plugin_1.6.21",
        "@maven//:org.jetbrains.kotlin.kotlin-gradle-plugin_1.9.22",
        "@maven//:org.jetbrains.kotlin.kotlin-reflect_1.4.31",
        "@maven//:org.jetbrains.kotlin.kotlin-reflect_1.4.32",
        "@maven//:org.jetbrains.kotlin.kotlin-reflect_1.6.21",
        "@maven//:org.jetbrains.kotlin.kotlin-script-runtime_1.6.21",
        "@maven//:org.jetbrains.kotlin.kotlin-stdlib-jdk7_1.4.32",
        "@maven//:org.jetbrains.kotlin.kotlin-stdlib-jdk8_1.4.31",
        "@maven//:org.jetbrains.kotlin.kotlin-stdlib-jdk8_1.6.21",
        "@maven//:org.jetbrains.kotlin.kotlin-stdlib-jdk8_1.9.22",
        "@maven//:org.jetbrains.kotlin.plugin.compose.org.jetbrains.kotlin.plugin.compose.gradle.plugin_2.2.10",
        "@maven//:org.jetbrains.kotlinx.kotlinx-coroutines-core_1.4.1",
        "@maven//:xmlpull.xmlpull_1.1.3.1",
    ],
)
